--- a/M1:D4/style.css
+++ b/M1:D4/style.css
@@ -1,2 +1,128 @@
 body {
+  margin: 0%;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+#maincard {
+  width: 270px;
+  height: 420px;
+  object-fit: contain;
+  position: relative;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  top: 20vh;
+  border-radius: 15px;
+  overflow: hidden;
+}
+
+#maincard img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 2;
+}
+#maincard-overlay {
+  position: absolute;
+  top: 0%;
+  bottom: 0%;
+  left: 0%;
+  right: 0%;
+  z-index: 10;
+}
+
+#maincard-overlay:hover {
+  background-color: rgba(0, 0, 0, 0.55);
+}
+
+#savebutton {
+  width: 55px;
+  background-color: rgb(156, 21, 21);
+  position: absolute;
+  right: 10px;
+  top: 5px;
+  border-radius: 15%;
+  transform: translateX(100px);
+  transition: transform 0.3s;
+  z-index: 15;
+  font-style: bold;
+  color: white;
+  font-size: 0.9em;
+}
+
+#maincard:hover #savebutton {
+  transform: translateX(0px);
+}
+
+#link {
+  width: 120px;
+  background-color: rgb(214, 214, 214);
+  position: absolute;
+  bottom: -10px;
+  left: 20px;
+  height: 20px;
+  border-radius: 5px;
+  transform: translateY(100px);
+
+  transition: transform 0.3s;
+  z-index: 10;
+  font-style: bold;
+  color: rgb(43, 43, 43);
+}
+#maincard:hover #link {
+  transform: translateY(-25px);
+}
+
+#link .fa-solid {
+  position: relative;
+  left: -5px;
+  top: 2px;
+}
+
+#share {
+  width: 35px;
+  height: 35px;
+  background-color: rgb(214, 214, 214);
+  position: absolute;
+  bottom: -10px;
+  left: 155px;
+  border-radius: 50%;
+  transform: translateY(100px);
+  transition: transform 0.3s;
+  z-index: 10;
+  font-style: bold;
+  color: rgb(43, 43, 43);
+}
+
+#share .fa-solid {
+  position: relative;
+  top: 10px;
+}
+
+#maincard:hover #share {
+  transform: translateY(-20px);
+}
+
+#dotdotdot {
+  width: 35px;
+  background-color: rgb(214, 214, 214);
+  position: absolute;
+  bottom: -10px;
+  left: 205px;
+  border-radius: 50%;
+  transform: translateY(100px);
+  transition: transform 0.3s;
+  z-index: 10;
+  height: 35px;
+  font-style: bold;
+  color: rgb(43, 43, 43);
+}
+
+#dotdotdot .fa-solid {
+  position: relative;
+  top: 17px;
+}
+
+#maincard:hover #dotdotdot {
+  transform: translateY(-20px);
 }
